--- a/EnrichStream/docker-compose.yaml
+++ b/EnrichStream/docker-compose.yaml
@@ -3,8 +3,6 @@ version: "3.8"
 services:
   enrichstream-test:
     build:
-      context: ComponentTest
-      dockerfile: Dockerfile
       secrets:
         - GITHUB_TOKEN
         - GITHUB_ACTOR
@@ -19,11 +17,7 @@ services:
         condition: service_healthy
 
   enrichstream-jobmanager:
-    image: ${DOCKER_REGISTRY-}enrichstream-job
     build:
-      dockerfile: Dockerfile
-      args:
-        - MAVEN_ARGS=${EXTRA_MAVEN_ARGS-}
       secrets:
         - GITHUB_TOKEN
         - GITHUB_ACTOR
@@ -61,18 +55,13 @@ services:
       retries: 30
 
   enrichstream-taskmanager:
-    image: ${DOCKER_REGISTRY-}enrichstream-job
     build:
-      dockerfile: Dockerfile
-      args:
-        - MAVEN_ARGS=${EXTRA_MAVEN_ARGS-}
       secrets:
         - GITHUB_TOKEN
         - GITHUB_ACTOR
     command: taskmanager
     environment:
-      - |
-        FLINK_PROPERTIES=
+      FLINK_PROPERTIES: |
         jobmanager.rpc.address: enrichstream-jobmanager
         taskmanager.memory.process.size: 4gb
         taskmanager.numberOfTaskSlots: 2
