--- a/JsonToAvro/docker-compose.yaml
+++ b/JsonToAvro/docker-compose.yaml
@@ -3,8 +3,6 @@ services:
 
   jsontoavro-test:
     build:
-      context: ComponentTest
-      dockerfile: Dockerfile
       secrets:
         - GITHUB_TOKEN
         - GITHUB_ACTOR
@@ -20,11 +18,7 @@ services:
         condition: service_healthy
 
   jsontoavro-jobmanager:
-    image: ${DOCKER_REGISTRY-}jsontoavro-job
     build:
-      dockerfile: Dockerfile
-      args:
-        - MAVEN_ARGS=${EXTRA_MAVEN_ARGS-}
       secrets:
         - GITHUB_TOKEN
         - GITHUB_ACTOR
@@ -66,18 +60,13 @@ services:
       retries: 30
 
   jsontoavro-taskmanager:
-    image: ${DOCKER_REGISTRY-}jsontoavro-job
     build:
-      dockerfile: Dockerfile
-      args:
-        - MAVEN_ARGS=${EXTRA_MAVEN_ARGS-}
       secrets:
         - GITHUB_TOKEN
         - GITHUB_ACTOR
     command: taskmanager
     environment:
-      - |
-        FLINK_PROPERTIES=
+      FLINK_PROPERTIES: |
         jobmanager.rpc.address: jsontoavro-jobmanager
         taskmanager.memory.process.size: 4gb
         taskmanager.numberOfTaskSlots: 2
