--- a/TransformAndStore/docker-compose.yaml
+++ b/TransformAndStore/docker-compose.yaml
@@ -3,8 +3,6 @@ version: "3"
 services:
   transformandstore-test:
     build:
-      context: ComponentTest
-      dockerfile: Dockerfile
       secrets:
         - GITHUB_TOKEN
         - GITHUB_ACTOR
@@ -25,11 +23,7 @@ services:
         condition: service_healthy
 
   transformandstore-jobmanager:
-    image: ${DOCKER_REGISTRY-}transformandstore-job
     build:
-      dockerfile: Dockerfile
-      args:
-        - MAVEN_ARGS=${EXTRA_MAVEN_ARGS-}
       secrets:
         - GITHUB_TOKEN
         - GITHUB_ACTOR
@@ -72,18 +66,13 @@ services:
       retries: 30
 
   transformandstore-taskmanager:
-    image: ${DOCKER_REGISTRY-}transformandstore-job
     build:
-      dockerfile: Dockerfile
-      args:
-        - MAVEN_ARGS=${EXTRA_MAVEN_ARGS-}
       secrets:
         - GITHUB_TOKEN
         - GITHUB_ACTOR
     command: taskmanager
     environment:
-      - |
-        FLINK_PROPERTIES=
+      FLINK_PROPERTIES: |
         jobmanager.rpc.address: transformandstore-jobmanager
         taskmanager.memory.process.size: 4gb
         taskmanager.numberOfTaskSlots: 2
