--- a/Observability/Dockerfile
+++ b/Observability/Dockerfile
@@ -5,34 +5,30 @@ FROM maven:3.9.6-eclipse-temurin-17-alpine as build
 
 WORKDIR /app
 
-ARG MAVEN_ARGS
-
 COPY pom.xml ./
 COPY settings.xml ./
 # Copy in local repository
 COPY .m2/ /root/.m2/
 
 # Download dependencies (with docker cache)
-RUN \
-    --mount=type=secret,id=GITHUB_TOKEN \
+RUN --mount=type=secret,id=GITHUB_TOKEN \
     --mount=type=secret,id=GITHUB_ACTOR \
     --mount=type=cache,target=./.m2,sharing=locked \
     cp -rn /root/.m2/ ./ &&\
     GITHUB_TOKEN="$(cat /run/secrets/GITHUB_TOKEN)" \
     GITHUB_ACTOR="$(cat /run/secrets/GITHUB_ACTOR)" \
-    mvn dependency:resolve dependency:resolve-plugins -B -U -s ./settings.xml -Dmaven.repo.local="${CI_PROJECT_DIR-.}"/.m2/repository
+    mvn dependency:go-offline -B -U -s ./settings.xml
 
 # Then add source.
 COPY src ./src
 
 # Finally compile, test, and jar up
-RUN \
-    --mount=type=secret,id=GITHUB_TOKEN \
+RUN --mount=type=secret,id=GITHUB_TOKEN \
     --mount=type=secret,id=GITHUB_ACTOR \
     --mount=type=cache,target=./.m2,sharing=locked \
     GITHUB_TOKEN="$(cat /run/secrets/GITHUB_TOKEN)" \
     GITHUB_ACTOR="$(cat /run/secrets/GITHUB_ACTOR)" \
-    mvn package -B -s ./settings.xml ${MAVEN_ARGS-} -Dmaven.repo.local="${CI_PROJECT_DIR-.}"/.m2/repository
+    mvn package -B -s ./settings.xml ${MAVEN_ARGS-}
 
 #
 #  Install jars onto clean runtime system.
