--- a/DockerComposeExamples/RunMultipleFlinkJobs/docker-compose.yaml
+++ b/DockerComposeExamples/RunMultipleFlinkJobs/docker-compose.yaml
@@ -32,14 +32,17 @@ services:
         - GITHUB_ACTOR
     command: |
       standalone-job
+
       --job-classname cheetah.example.job.JsonToAvroJob
+
       --kafka-bootstrap-servers kafka:19092
+      --kafka-group-id jsonToAvro-group-id
+      --sr-url http://schema-registry:8080/apis/ccompat/v7
+
       --input-kafka-topic jsonToAvroInputTopic
       --output-kafka-topic jsonToAvroOutputTopic
-      --kafka-group-id jsonToAvro-group-id
-      --kafka-security-protocol SASL_PLAINTEXT
-      --sr-url http://schema-registry:8080/apis/ccompat/v7
     environment:
+      SECURITY_PROTOCOL: SASL_PLAINTEXT
       TOKEN_URL: http://keycloak:1852/realms/local-development/protocol/openid-connect/token
       KAFKA_CLIENT_ID: default-access
       KAFKA_CLIENT_SECRET: default-access-secret
