--- a/DockerComposeExamples/RunMultipleFlinkJobs/docker-compose.yaml
+++ b/DockerComposeExamples/RunMultipleFlinkJobs/docker-compose.yaml
@@ -39,8 +39,8 @@ services:
       --kafka-group-id jsonToAvro-group-id
       --sr-url http://schema-registry:8080/apis/ccompat/v7
 
-      --input-kafka-topic jsonToAvroInputTopic
-      --output-kafka-topic jsonToAvroOutputTopic
+      --input-kafka-topic JsonToAvroInputTopic
+      --output-kafka-topic JsonToAvroOutputTopic
     environment:
       SECURITY_PROTOCOL: SASL_PLAINTEXT
       TOKEN_URL: http://keycloak:1852/realms/local-development/protocol/openid-connect/token
@@ -111,7 +111,7 @@ services:
       --kafka-group-id AvroToJson-group-id
       --schema-registry-url http://schema-registry:8080/apis/ccompat/v7
 
-      --input-kafka-topic jsonToAvroOutputTopic
+      --input-kafka-topic JsonToAvroOutputTopic
       --output-kafka-topic AvroToJsonOutputTopic
     environment:
       SECURITY_PROTOCOL: SASL_PLAINTEXT
