cleaned dockerfiles and added .mvn/maven.config to all projects

--- a/TransformAndStore/Dockerfile
+++ b/TransformAndStore/Dockerfile
@@ -1,5 +1,5 @@
 #
-#  Install dependencies, compile sources, build jars.
+#  Install dependencies, compile sources, build jar.
 #
 FROM maven:3.9.6-eclipse-temurin-17-alpine as build
 
@@ -7,15 +7,15 @@ WORKDIR /app
 
 COPY pom.xml ./
 COPY settings.xml ./
-# Copy in local repository
-COPY .m2/ /root/.m2/
+COPY .mvn .mvn
 
 # Download dependencies (with docker cache)
 RUN --mount=type=secret,id=GITHUB_TOKEN \
     --mount=type=secret,id=GITHUB_ACTOR \
+    --mount=type=cache,target=/root/.m2,sharing=locked \
     GITHUB_TOKEN="$(cat /run/secrets/GITHUB_TOKEN)" \
     GITHUB_ACTOR="$(cat /run/secrets/GITHUB_ACTOR)" \
-    mvn dependency:go-offline -B -U -s ./settings.xml
+    mvn dependency:go-offline -B
 
 # Then add source.
 COPY src ./src
@@ -23,14 +23,15 @@ COPY src ./src
 # Finally compile, test, and jar up
 RUN --mount=type=secret,id=GITHUB_TOKEN \
     --mount=type=secret,id=GITHUB_ACTOR \
+    --mount=type=cache,target=/root/.m2,sharing=locked \
     GITHUB_TOKEN="$(cat /run/secrets/GITHUB_TOKEN)" \
     GITHUB_ACTOR="$(cat /run/secrets/GITHUB_ACTOR)" \
-    mvn package -B -s ./settings.xml
+    mvn package -B
 
 #
-#  Install jars onto clean runtime system.
+#  Install jar onto clean runtime system.
 #
-FROM ghcr.io/trifork/cheetah-lib-processing:E2E-SNAPSHOT1508 as runtime
+FROM ghcr.io/trifork/cheetah-lib-processing:E2E-SNAPSHOT1508
 
 COPY --from=build /app/target/transform-and-store*.jar /opt/flink/usrlib/artifacts/transform-and-store.jar
 
