--- a/AvroSqlApplicationMode/docker-compose.yaml
+++ b/AvroSqlApplicationMode/docker-compose.yaml
@@ -32,7 +32,8 @@ services:
       --kafka-bootstrap-servers kafka:19092
       --kafka-group-id AvroSqlApplicationMode-group-id
       --sql "INSERT INTO MultiSourceOutput SELECT AvroSqlApplicationModeInputTopic.deviceId, AvroSqlApplicationModeInputTopic.`timestamp`, AvroSqlApplicationModeInputTopic.`value` FROM AvroSqlApplicationModeInputTopic JOIN AvroSqlApplicationModeOutputTopic ON AvroSqlApplicationModeInputTopic.`timestamp` = AvroSqlApplicationModeOutputTopic.`timestamp` WHERE AvroSqlApplicationModeInputTopic.`timestamp` > 2222"
-      --source SqlApplicationModeInputTopic
+      # --source SqlApplicationModeInputTopic                For test purpose will be used "--source jsonToAvroInputTopic"
+      --source jsonToAvroInputTopic
       --source1 SqlApplicationModeOutputTopic
       --sink MultiSourceOutput
       --sourceSql "deviceId STRING, `timestamp` BIGINT, `value` FLOAT"
@@ -42,6 +43,10 @@ services:
       --clientId Sql-client-id
       
       --sr-url http://schema-registry:8080/apis/ccompat/v7
+      --token-url http://keycloak:1852/realms/local-development/protocol/openid-connect/token
+      --apicurio-client-id default-access
+      --client-secret default-access-secret
+      --scope schema-registry
     ports:
       - "8098:8081"
 
