Added avro sql application mode type - sql metadata

--- a/AvroSqlApplicationMode/pom.xml
+++ b/AvroSqlApplicationMode/pom.xml
@@ -135,6 +135,12 @@ under the License.
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson</groupId>
+            <artifactId>databind</artifactId>
+            <version>2.7.4</version>
+        </dependency>
+
         <!-- Testing -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
