--- a/AvroSqlApplicationMode/pom.xml
+++ b/AvroSqlApplicationMode/pom.xml
@@ -61,12 +61,6 @@ under the License.
         </dependency>
 
         <!-- AVRO-confluent registry -->
-
-        <dependency>
-            <groupId>org.apache.kafka</groupId>
-            <artifactId>kafka-clients</artifactId>
-            <version>3.7.0</version>
-        </dependency>
         <dependency>
             <groupId>io.confluent</groupId>
             <artifactId>kafka-schema-registry-client</artifactId>
@@ -77,7 +71,6 @@ under the License.
             <artifactId>kafka-avro-serializer</artifactId>
             <version>7.6.0</version> <!-- replace with your Confluent version -->
         </dependency>
-
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-avro-confluent-registry</artifactId>
@@ -87,11 +80,6 @@ under the License.
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-avro</artifactId>
             <version>1.15.4</version>
-        </dependency>
-        <dependency>
-            <groupId>io.confluent</groupId>
-            <artifactId>kafka-schema-registry</artifactId>
-            <version>7.6.0</version>
         </dependency>
 
         <!-- TableAPI -->
@@ -136,9 +124,9 @@ under the License.
         </dependency>
 
         <dependency>
-            <groupId>com.fasterxml.jackson</groupId>
-            <artifactId>databind</artifactId>
-            <version>2.7.4</version>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.16.1</version>
         </dependency>
 
         <!-- Testing -->
@@ -152,6 +140,12 @@ under the License.
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-test-utils</artifactId>
             <version>${flink.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>5.10.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
