--- a/AvroSqlApplicationMode/docker-compose.yaml
+++ b/AvroSqlApplicationMode/docker-compose.yaml
@@ -30,11 +30,12 @@ services:
       standalone-job
       --job-classname cheetah.example.avrosqlapplicationmode.job.AvroSqlApplicationModeJob
       --kafka-bootstrap-servers kafka:19092
-      --kafka-group-id AvroSqlApplicationMode-group-id
-      --sql "INSERT INTO avroToAvroOutputSinkTopic SELECT jsonToAvroOutputTopic.deviceId, jsonToAvroOutputTopic.`value`, jsonToAvroOutputTopic.`timestamp`, jsonToAvroOutputTopic.extraField FROM jsonToAvroOutputTopic  WHERE jsonToAvroOutputTopic.`timestamp` > 1710491343730"
+      --sql "INSERT INTO sqlSinkTopic SELECT jsonToAvroOutputTopic.deviceId, jsonToAvroOutputTopic.`value`, jsonToAvroOutputTopic.`timestamp`, jsonToAvroOutputTopic.extraField FROM jsonToAvroOutputTopic  WHERE jsonToAvroOutputTopic.`timestamp` > 1710491343730"
       --source jsonToAvroOutputTopic
-      --sink avroToAvroOutputSinkTopic
-      --groupId jsonToAvro-group-id
+      --sink sqlSinkTopic
+      --group-id jsonToAvro-group-id
+      --input-type avroConfluent
+      --output-type avroConfluent
       
       --sr-url http://schema-registry:8080/apis/ccompat/v7
       --token-url http://keycloak:1852/realms/local-development/protocol/openid-connect/token
