--- a/AvroSqlApplicationMode/docker-compose.yaml
+++ b/AvroSqlApplicationMode/docker-compose.yaml
@@ -30,12 +30,12 @@ services:
       standalone-job
       --job-classname cheetah.example.avrosqlapplicationmode.job.AvroSqlApplicationModeJob
       --kafka-bootstrap-servers kafka:19092
-      --sql "INSERT INTO sqlSinkTopic SELECT jsonToAvroOutputTopic.deviceId, jsonToAvroOutputTopic.`value`, jsonToAvroOutputTopic.`timestamp`, jsonToAvroOutputTopic.extraField FROM jsonToAvroOutputTopic  WHERE jsonToAvroOutputTopic.`timestamp` > 1710491343730"
-      --source jsonToAvroOutputTopic
+      --sql "INSERT INTO sqlSinkTopic SELECT avroInputTopic.deviceId, avroInputTopic.`value`, avroInputTopic.`timestamp`, avroInputTopic.extraField FROM avroInputTopic WHERE avroInputTopic.deviceId LIKE 'deviceId-1'"
+      --source avroInputTopic
       --sink sqlSinkTopic
       --group-id jsonToAvro-group-id
       --input-type avroConfluent
-      --output-type avroConfluent
+      --output-type json
       
       --sr-url http://schema-registry:8080/apis/ccompat/v7
       --token-url http://keycloak:1852/realms/local-development/protocol/openid-connect/token
