--- a/AvroSqlApplicationMode/docker-compose.yaml
+++ b/AvroSqlApplicationMode/docker-compose.yaml
@@ -35,7 +35,7 @@ services:
       --sink sqlSinkTopic
       --group-id jsonToAvro-group-id
       --input-type avroConfluent
-      --output-type json
+      --output-type avroConfluent
       
       --sr-url http://schema-registry:8080/apis/ccompat/v7
       --token-url http://keycloak:1852/realms/local-development/protocol/openid-connect/token
