--- a/AvroSqlApplicationMode/ComponentTest/appsettings.json
+++ b/AvroSqlApplicationMode/ComponentTest/appsettings.json
@@ -4,8 +4,9 @@
     "OAUTH2": {
       "CLIENTID": "default-access",
       "CLIENTSECRET": "default-access-secret",
-      "SCOPE": "kafka",
+      "SCOPE": "kafka schema-registry",
       "TOKENENDPOINT": "http://localhost:1852/realms/local-development/protocol/openid-connect/token"
-    }
+    },
+    "SCHEMAREGISTRYURL": "http://localhost:8081/apis/ccompat/v7"
   }
 }
