--- a/AvroSqlApplicationMode/docker-compose.avroconfluenttoavro.yaml
+++ b/AvroSqlApplicationMode/docker-compose.avroconfluenttoavro.yaml
@@ -13,6 +13,7 @@ services:
       KAFKA__OAUTH2__CLIENTSECRET: default-access-secret
       KAFKA__OAUTH2__SCOPE: kafka
       KAFKA__OAUTH2__TOKENENDPOINT: http://keycloak:1852/realms/local-development/protocol/openid-connect/token
+      KAFKA__SCHEMAREGISTRYURL: http://schema-registry:8080/apis/ccompat/v7
     depends_on:
       avrosqlapplicationmode-jobmanager:
         condition: service_healthy
@@ -33,9 +34,9 @@ services:
       --sql "INSERT INTO sqlSinkTopic SELECT avroInputTopic.deviceId, avroInputTopic.`value`, avroInputTopic.`timestamp`, avroInputTopic.extraField FROM avroInputTopic WHERE avroInputTopic.deviceId LIKE 'deviceId-1'"
       --source avroInputTopic
       --sink sqlSinkTopic
-      --group-id jsonToAvro-group-id
+      --group-id avroSql-group-id
       --input-type avroConfluent
-      --output-type avroConfluent
+      --output-type avro
       
       --sr-url http://schema-registry:8080/apis/ccompat/v7
       --token-url http://keycloak:1852/realms/local-development/protocol/openid-connect/token
