--- a/AvroSqlApplicationMode/ComponentTest/appsettings.json
+++ b/AvroSqlApplicationMode/ComponentTest/appsettings.json
@@ -1,12 +1,12 @@
 {
   "KAFKA": {
-    "URL": "localhost:9092",
+    "URL": "kafka:19092",
     "OAUTH2": {
       "CLIENTID": "default-access",
       "CLIENTSECRET": "default-access-secret",
       "SCOPE": "kafka schema-registry",
       "TOKENENDPOINT": "http://localhost:1852/realms/local-development/protocol/openid-connect/token"
     },
-    "SCHEMAREGISTRYURL": "http://localhost:8081/apis/ccompat/v7"
+    "SCHEMAREGISTRYURL": "http://localhost:8080/apis/ccompat/v7"
   }
 }
