--- a/AvroSqlApplicationMode/docker-compose.avroconfluenttoavroconfluent.yaml
+++ b/AvroSqlApplicationMode/docker-compose.avroconfluenttoavroconfluent.yaml
@@ -11,7 +11,7 @@ services:
       KAFKA__URL: kafka:19092
       KAFKA__OAUTH2__CLIENTID: default-access
       KAFKA__OAUTH2__CLIENTSECRET: default-access-secret
-      KAFKA__OAUTH2__SCOPE: kafka
+      KAFKA__OAUTH2__SCOPE: kafka schema-registry
       KAFKA__OAUTH2__TOKENENDPOINT: http://keycloak:1852/realms/local-development/protocol/openid-connect/token
       KAFKA__SCHEMAREGISTRYURL: http://schema-registry:8080/apis/ccompat/v7
 #    depends_on:
