--- a/AvroSqlApplicationMode/docker-compose.avroconfluenttojson.yaml
+++ b/AvroSqlApplicationMode/docker-compose.avroconfluenttojson.yaml
@@ -11,12 +11,12 @@ services:
       KAFKA__URL: kafka:19092
       KAFKA__OAUTH2__CLIENTID: default-access
       KAFKA__OAUTH2__CLIENTSECRET: default-access-secret
-      KAFKA__OAUTH2__SCOPE: kafka
+      KAFKA__OAUTH2__SCOPE: kafka schema-registry
       KAFKA__OAUTH2__TOKENENDPOINT: http://keycloak:1852/realms/local-development/protocol/openid-connect/token
       KAFKA__SCHEMAREGISTRYURL: http://schema-registry:8080/apis/ccompat/v7
-    depends_on:
-      avrosqlapplicationmode-jobmanager:
-        condition: service_healthy
+  #    depends_on:
+  #      avrosqlapplicationmode-jobmanager:
+  #        condition: service_healthy
 
   avrosqlapplicationmode-jobmanager:
     image: ${DOCKER_REGISTRY-}avrosqlapplicationmode-job
