updated new example, changed dockerfile cache mount from /root/.m2 to /root/.m2/repository changed repository id from github to trifork-github, removed maven-dependency-plugin that is no longer used, and re-added context for component test docker compose services

--- a/EnrichStream/Dockerfile
+++ b/EnrichStream/Dockerfile
@@ -12,7 +12,7 @@ COPY .mvn .mvn
 # Download dependencies (with docker cache)
 RUN --mount=type=secret,id=GITHUB_TOKEN \
     --mount=type=secret,id=GITHUB_ACTOR \
-    --mount=type=cache,target=/root/.m2,sharing=locked \
+    --mount=type=cache,target=/root/.m2/repository,sharing=locked \
     GITHUB_TOKEN="$(cat /run/secrets/GITHUB_TOKEN)" \
     GITHUB_ACTOR="$(cat /run/secrets/GITHUB_ACTOR)" \
     mvn dependency:go-offline -B
@@ -23,7 +23,7 @@ COPY src ./src
 # Finally compile, test, and jar up
 RUN --mount=type=secret,id=GITHUB_TOKEN \
     --mount=type=secret,id=GITHUB_ACTOR \
-    --mount=type=cache,target=/root/.m2,sharing=locked \
+    --mount=type=cache,target=/root/.m2/repository,sharing=locked \
     GITHUB_TOKEN="$(cat /run/secrets/GITHUB_TOKEN)" \
     GITHUB_ACTOR="$(cat /run/secrets/GITHUB_ACTOR)" \
     mvn package -B
