--- a/SerializationErrorCatch/docker-compose.yaml
+++ b/SerializationErrorCatch/docker-compose.yaml
@@ -2,6 +2,7 @@ version: "3"
 services:
   serializationerrorcatch-test:
     build:
+      context: ComponentTest
       secrets:
         - GITHUB_TOKEN
         - GITHUB_ACTOR
