--- a/EnrichStream/docker-compose.yaml
+++ b/EnrichStream/docker-compose.yaml
@@ -3,6 +3,7 @@ version: "3.8"
 services:
   enrichstream-test:
     build:
+      context: ComponentTest
       secrets:
         - GITHUB_TOKEN
         - GITHUB_ACTOR
