--- a/JsonToAvro/pom.xml
+++ b/JsonToAvro/pom.xml
@@ -35,7 +35,7 @@ under the License.
 
     <repositories>
         <repository>
-            <id>github</id>
+            <id>trifork-github</id>
             <url>https://maven.pkg.github.com/trifork/cheetah-lib-processing</url>
             <snapshots>
                 <enabled>true</enabled>
