--- a/MultipleSideOutput/docker-compose.yaml
+++ b/MultipleSideOutput/docker-compose.yaml
@@ -3,6 +3,7 @@ version: "3"
 services:
   multiplesideoutputexample-test:
     build:
+      context: ComponentTest
       secrets:
         - GITHUB_TOKEN
         - GITHUB_ACTOR
