--- a/TransformAndStore/docker-compose.yaml
+++ b/TransformAndStore/docker-compose.yaml
@@ -3,6 +3,7 @@ version: "3"
 services:
   transformandstore-test:
     build:
+      context: ComponentTest
       secrets:
         - GITHUB_TOKEN
         - GITHUB_ACTOR
