Updated lib-processing version and added a postfix to main source and main sink for all examples

--- a/Observability/docker-compose.yaml
+++ b/Observability/docker-compose.yaml
@@ -26,7 +26,7 @@ services:
       standalone-job
       --job-classname cheetah.example.observability.job.ObservabilityJob
       --kafka-bootstrap-servers kafka:19092
-      --input-kafka-topic ObservabilityInputTopic
+      --input-kafka-topic-main-source ObservabilityInputTopic
       --kafka-group-id Observability-group-id
       --kafka-security-protocol SASL_PLAINTEXT
     environment:
