--- a/AvroToJson/docker-compose.yaml
+++ b/AvroToJson/docker-compose.yaml
@@ -29,8 +29,8 @@ services:
       --kafka-bootstrap-servers kafka:19092
       --kafka-group-id AvroToJson-group-id
       --schema-registry-url http://schema-registry:8080/apis/ccompat/v7
-      --input-kafka-topic AvroToJsonInputTopic
-      --output-kafka-topic AvroToJsonOutputTopic
+      --input-kafka-topic-main-source AvroToJsonInputTopic
+      --output-kafka-topic-main-sink AvroToJsonOutputTopic
     environment:
       SECURITY_PROTOCOL: SASL_PLAINTEXT
       TOKEN_URL: http://keycloak:1852/realms/local-development/protocol/openid-connect/token
