--- a/AvroToJson/pom.xml
+++ b/AvroToJson/pom.xml
@@ -49,7 +49,7 @@
         <dependency>
             <groupId>com.trifork.cheetah.processing</groupId>
             <artifactId>cheetah-lib-processing</artifactId>
-            <version>5.0.2</version>
+            <version>5.1.0-feature-unparsable-deserialization-handling-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
