--- a/EnrichStream/docker-compose.yaml
+++ b/EnrichStream/docker-compose.yaml
@@ -29,8 +29,8 @@ services:
       --kafka-group-id EnrichStream-group-id
       --kafka-security-protocol SASL_PLAINTEXT
       --input-kafka-topic-enriching EnrichStreamEnrichTopic
-      --input-kafka-topic-main EnrichStreamInputTopic
-      --output-kafka-topic EnrichStreamOutputTopic
+      --input-kafka-topic-main-source EnrichStreamInputTopic
+      --output-kafka-topic-main-sink EnrichStreamOutputTopic
     environment:
       KAFKA_CLIENT_ID: default-access
       KAFKA_CLIENT_SECRET: default-access-secret
