--- a/ExternalLookup/docker-compose.yaml
+++ b/ExternalLookup/docker-compose.yaml
@@ -28,8 +28,8 @@ services:
       --kafka-bootstrap-servers kafka:19092
       --kafka-group-id ExternalLookup-group-id
       --kafka-security-protocol SASL_PLAINTEXT
-      --input-kafka-topic ExternalLookupInputTopic
-      --output-kafka-topic ExternalLookupOutputTopic
+      --input-kafka-topic-main-source ExternalLookupInputTopic
+      --output-kafka-topic-main-sink ExternalLookupOutputTopic
     environment:
       KAFKA_CLIENT_ID: default-access
       KAFKA_CLIENT_SECRET: default-access-secret
