--- a/FlinkStates/docker-compose.yaml
+++ b/FlinkStates/docker-compose.yaml
@@ -28,7 +28,7 @@ services:
       --kafka-bootstrap-servers kafka:19092
       --kafka-group-id FlinkStates-group-id
       --kafka-security-protocol SASL_PLAINTEXT
-      --input-kafka-topic FlinkStatesInputTopic
+      --input-kafka-topic-main-source FlinkStatesInputTopic
       --output-kafka-topic-value FlinkStatesOutputTopic-value
       --output-kafka-topic-reducing FlinkStatesOutputTopic-reducing
       --output-kafka-topic-aggregating FlinkStatesOutputTopic-aggregating
