--- a/JsonToAvro/docker-compose.yaml
+++ b/JsonToAvro/docker-compose.yaml
@@ -27,8 +27,8 @@ services:
       standalone-job
       --job-classname cheetah.example.job.JsonToAvroJob
       --kafka-bootstrap-servers kafka:19092
-      --input-kafka-topic jsonToAvroInputTopic
-      --output-kafka-topic jsonToAvroOutputTopic
+      --input-kafka-topic-main-source jsonToAvroInputTopic
+      --output-kafka-topic-main-sink jsonToAvroOutputTopic
       --kafka-group-id jsonToAvro-group-id
       --kafka-security-protocol SASL_PLAINTEXT
       --sr-url http://schema-registry:8080/apis/ccompat/v7
