--- a/MultipleSideOutput/docker-compose.yaml
+++ b/MultipleSideOutput/docker-compose.yaml
@@ -25,8 +25,7 @@ services:
       --kafka-bootstrap-servers kafka:19092
       --kafka-group-id MultipleSideOutput-group-id
       --kafka-security-protocol SASL_PLAINTEXT
-      --input-kafka-topic MultipleSideOutputExampleInputTopic
-      --output-kafka-topic MultipleSideOutputExampleOutputTopic
+      --input-kafka-topic-main-source MultipleSideOutputExampleInputTopic
       --output-kafka-topic-a OutputA-events
       --output-kafka-topic-b OutputB-events
       --output-kafka-topic-cd OutputCD-events
