--- a/SerializationErrorCatch/docker-compose.yaml
+++ b/SerializationErrorCatch/docker-compose.yaml
@@ -25,8 +25,8 @@ services:
       standalone-job
       --job-classname cheetah.example.serializationerrorcatch.job.SerializationErrorCatchJob
       --kafka-bootstrap-servers kafka:19092
-      --input-kafka-topic SerializationErrorCatchInputTopic
-      --output-kafka-topic SerializationErrorCatchOutputTopic
+      --input-kafka-topic-main-source SerializationErrorCatchInputTopic
+      --output-kafka-topic-main-sink SerializationErrorCatchOutputTopic
       --output-kafka-topic-un-parsed SerializationErrorCatchOutputTopicUnParsed
       --kafka-group-id SerializationErrorCatch-group-id
       --kafka-security-protocol SASL_PLAINTEXT
